--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.badoualy:datepicker-timeline:c6dcd05737'
 
     //google
     implementation 'com.google.android.libraries.places:places:2.3.0'
