--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DuarHub"
         android:usesCleartextTraffic="true">
-        <activity android:name=".presenter.ActivityAssignRider"></activity>
+        <activity android:name=".presenter.ActivitySalaryCalculation"></activity>
+        <activity android:name=".presenter.ActivityRiderClearance" />
+        <activity android:name=".presenter.ActivityClientClearance" />
+        <activity android:name=".presenter.ActivityDeliveryHistory" />
+        <activity android:name=".presenter.ActivityAssignRider" />
         <activity android:name=".presenter.ActivityDeliveryDetails" />
         <activity android:name=".presenter.ActivityRegisterNewRider" />
         <activity android:name=".presenter.ActivityRegisterNewClient" />
