--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DuarHub"
         android:usesCleartextTraffic="true">
-        <activity android:name=".presenter.ActivityClientOrderHistory"></activity>
+        <activity android:name=".presenter.ActivityRiderRideHistory"></activity>
+        <activity android:name=".presenter.ActivityClientOrderHistory" />
         <activity android:name=".presenter.ActivitySalaryCalculation" />
         <activity android:name=".presenter.ActivityRiderClearance" />
         <activity android:name=".presenter.ActivityClientClearance" />
