--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
          location permissions for the "MyLocation" functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -27,13 +30,7 @@
         <activity android:name=".presenter.ActivityDeliveryDetails" />
         <activity android:name=".presenter.ActivityRegisterNewRider" />
         <activity android:name=".presenter.ActivityRegisterNewClient" />
-
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
-
-        <activity
-            android:name=".presenter.MapsActivity"
+        <activity android:name=".presenter.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".presenter.ActivityHome">
             <intent-filter>
@@ -43,11 +40,19 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.CustomFirebaseMessagingService">
+        <service android:name=".services.CustomFirebaseMessagingService"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="duar_centralhub_id" />
     </application>
 
 </manifest>
